# dor-console-py

./: .gitignore  IMPORTING.md  NOTES.md  README.md  main.py  pyproject.toml
dor/: builder.py  config.py  domain.py  utils.py
dor/adapters/: catalog.py  collection_repository.py  premis_event_repository.py
dor/cli/: catalog.py  main.py  server.py
dor/entrypoints/api/: console.py  dependencies.py  main.py
dor/models/: checksum.py  collection.py  domain.py  file_set.py  fileset.py  intellectual_object.py  object_file.py  premis_event.py
dor/services/: catalog.py
static/css/: main.css  umich.css
static/js/: main.js
templates/: base.html  collections.html  event.html  event_modal.html  object.html  objects.html
templates/macros/: pagination.html  start_pagination.html
templates/partials/: _dialog.html  _event_metadata.html  _footer.html  _side-nav.html
tests/: test_catalog.py  test_collection_repository.py  test_premis_event_repository.py  test_utils.py
