[project]
name = "dor-console-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faker>=37.4.0",
    "faker-biology>=0.6.5",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.41",
    "typer>=0.16.0",
]

[project.scripts]
dor = "dor.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dor"]

