[project]
name = "dor-console-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cattrs>=25.1.1",
    "faker>=37.4.0",
    "faker-biology>=0.6.5",
    "fastapi[standard]>=0.116.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.41",
    "typer>=0.16.0",
]

[project.scripts]
dor = "dor.cli.main:app"
# server = "dor.cli.server:start_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dor"]

